--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,7 +131,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: '$GITHUB_WORKSPACE/pages'
+          path: ${{github.workspace}}/pages
 
       - name: Deploy to GitHub Pages
         id: deployment
