--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,13 +118,10 @@ jobs:
       - name: Download Bootstrap
         run: |
           cd $GITHUB_WORKSPACE
-          mkdir bootstrap
-          cd bootstrap
-          wget https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css
-          wget https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css.map
-          wget https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css
-          wget https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js
-          wget https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js.map
+          wget https://github.com/twbs/bootstrap/releases/download/v5.2.3/bootstrap-5.2.3-dist.zip
+          wget https://github.com/twbs/icons/releases/download/v1.10.3/bootstrap-icons-1.10.3.zip
+          unzip bootstrap-5.2.3-dist.zip -d bootstrap
+          unzip bootstrap-icons-1.10.3.zip -d bootstrap-icons
 
       #
       # GitHub pages deployment
@@ -139,6 +136,7 @@ jobs:
           mkdir ketcher
           cp -R $GITHUB_WORKSPACE/InChI-Web-Demo/ketcher/react-app/build/* ketcher
           cp -R $GITHUB_WORKSPACE/bootstrap .
+          cp -R $GITHUB_WORKSPACE/bootstrap-icons .
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
