--- a/ketcher/react-app/package.json
+++ b/ketcher/react-app/package.json
@@ -4,11 +4,10 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
-    "ketcher-react": "2.7.2",
-    "ketcher-standalone": "2.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "web-vitals": "^2.1.4"
+    "ketcher-react": "2.8.0",
+    "ketcher-standalone": "2.8.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "react-scripts": "5.0.1"
